style.css
body {
  box-sizing: border-box;
}

h1 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 2em;
}

h2 {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 1.5em;
}

p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1em;
}






header {
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: space-evenly;
  background-color: darkgray;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 30px;
  padding-left: 10px;
  padding-right: 10px;
  
}

nav{
  width: 200px;
  height: 50px;
  align-items: center;
  text-align: center;
  padding-top: 30px;
}

main {
  
}

section {
  width: 1000px;
  padding-left: 10px;
}

section img {
  margin-bottom: 30px;
}

section:nth-child(2) {
  display: flex;
  justify-content: space-between;
}

section:nth-child(2) img {
  margin-bottom: 30px;
}

section:nth-child(3) {
  display: flex;
  justify-content: space-between;
  padding-bottom: 30px;
}

section:nth-child(3) img {
  
  width: 50%;

}

section:nth-child(3) article {
  width: 45%;
  
  display: flex;
  flex-direction: column;
  text-align: center;
  
  
}

section:nth-child(3) article h2 {
  margin-bottom: 30px;
}

section:nth-child(3) article p {
  height: 280px;
  overflow: scroll;
  margin-bottom: 30px;
}



button {
  width: 150px;
  height: 20px;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  background-color: gray;
  transition-delay: 350ms;
  
}

button:hover {
  background-color: bisque;
  cursor: pointer;
}

footer {
  width: 100%;
  height: 40px;
  background-color: darkgray;
}

